Enhance outbox pattern, refactor content structure, and update API (#3)
* Enhance outbox pattern with partition keys and add event publishing

- Add partition_key column to OutboxEvent entity for Kafka message ordering
- Add optimistic locking (version) to Streak entity to prevent concurrent updates
- Publish AchievementEarnedEvent via outbox when achievements are unlocked
- Publish ExamCompletedEvent via outbox when mock exams are submitted
- Publish QuestionAnsweredEvent via outbox when practice questions are answered
- Publish SessionCompletedEvent via outbox when practice

* Refactor lesson content structure and enhance achievement filtering

- Replace flat lesson content field with structured sections array
- Add section properties: heading, body, tip, keyRule, relatedRoadSignCode, sortOrder
- Filter achievements by productCode (includes product-specific and platform-wide)
- Add productCode field to StrapiAchievementDefDto
- Add domainWeights and difficultyDistribution to ExamConfig
- Update Strapi client to populate lesson sections and achievement product filters
- Update

* feat: Integrate user-service to fetch exam dates for readiness score calculations and study plan generation.

* refactor: Consolidate and enhance Karate configuration with new test variables, disabled redirects, and an empty Redis password in acceptance tests.

* refactor: Migrate Strapi integration from v4 to v5 API with enhanced error handling and caching

- Update StrapiClient to use new v5 response wrappers (StrapiResponse, StrapiSingleResponse)
- Add id and documentId fields to all Strapi DTOs for v5 compatibility
- Configure Jackson to ignore unknown properties for forward compatibility
- Use shared ObjectMapper in WebClient for consistent JSON deserialization
- Add pagination warning when total items exceed page size
- Cache empty Strapi responses with

* feat: Add onboarding catalog endpoint to fetch full content hierarchy in one call

- Add /api/content/onboarding-catalog endpoint